[package]
name = "helix-shortcut-quiz"
authors = ["Tom Groenwoldt <tom.groenwoldt@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A quiz web application for learning the helix editor shortcuts."
readme = "README.md"
repository = "https://github.com/tomgroenwoldt/shortcut-quiz"
keywords = ["helix", "editor", "quiz", "game"]
categories = ["game", "wasm", "web-programming", "editor"]

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
gloo-console = "0.2.3"
gloo-events = "0.1.2"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
yew = { version="0.20", features=["csr"] }
